LanguageTheory/TP_2/exercise_4/grammar_3/parser.output
   0  $accept : %entry% $end

   1  sp : s EOF

   2  s : u A
   3    | B u C
   4    | C
   5    | B A

   6  u : D

   7  %entry% : '\001' sp

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . sp  (7)

	B  shift 3
	C  shift 4
	D  shift 5
	.  error

	sp  goto 6
	s  goto 7
	u  goto 8


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	s : B . u C  (3)
	s : B . A  (5)

	A  shift 9
	D  shift 5
	.  error

	u  goto 10


state 4
	s : C .  (4)

	.  reduce 4


state 5
	u : D .  (6)

	.  reduce 6


state 6
	%entry% : '\001' sp .  (7)

	.  reduce 7


state 7
	sp : s . EOF  (1)

	EOF  shift 11
	.  error


state 8
	s : u . A  (2)

	A  shift 12
	.  error


state 9
	s : B A .  (5)

	.  reduce 5


state 10
	s : B u . C  (3)

	C  shift 13
	.  error


state 11
	sp : s EOF .  (1)

	.  reduce 1


state 12
	s : u A .  (2)

	.  reduce 2


state 13
	s : B u C .  (3)

	.  reduce 3


8 terminals, 5 nonterminals
8 grammar rules, 14 states
